# pgp-ffi

./: .gitignore  Cargo.toml  README.md  build.rs  cbindgen.toml  pgp-ffi.h  test.c
src/: lib.rs  main.rs
