[package]
name = "pgp-ffi"
version = "0.0.1"
edition = "2021"
description = "OpenPGP and Sequoia FFI bindings"
repository = "https://github.com/ManyMath/pgp-ffi"
license = "MIT"

[lib]
name = "pgp_ffi"
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib"]

[[bin]]
name = "pgp_ffi"
path = "src/main.rs"

[dependencies]
sequoia-openpgp = "1.21.2"
