[package]
name = "pgp-ffi"
version = "0.0.1"
edition = "2021"
description = "OpenPGP and Sequoia FFI bindings"
repository = "https://github.com/ManyMath/pgp-ffi"
license = "MIT"

[lib]
name = "pgp_ffi"
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib"]

[[bin]]
name = "pgp_ffi"
path = "src/main.rs"

[dependencies]
sequoia-openpgp = { version = "1", default-features = false, features = ["crypto-rust", "allow-experimental-crypto", "allow-variable-time-crypto"] }
libc = "0.2"

[build-dependencies]
cbindgen = "0.27.0"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
